kubernetes/apps/zabbix/zabbix-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-db
  labels:
    app: zabbix-db
spec:
  selector:
    matchLabels:
      app: zabbix-db
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-db
    spec:
      nodeSelector:
        zabbixdb: allowed
      volumes:
      - name: zabbix-db
        nfs:
          path: /mnt/ssd/k8s/zabbix/zabbix-db/mariadb
          server: 10.10.3.2

      restartPolicy: Always
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      containers:
      - name: zabbix-db
        image: mariadb:11.3
        resources:
          requests:
            cpu: 100m
            memory: 1G
          limits:
            memory: 2G

        command:
        - mariadbd
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_bin
        - --default-authentication-plugin=mysql_native_password

        ports:
        - containerPort: 3306
          name: zabbix-db

        volumeMounts:
        - mountPath: /var/lib/mysql
          name: zabbix-db

        securityContext:
          runAsNonRoot: true
          runAsUser: 1000

---

apiVersion: v1
kind: Service
metadata:
  name: zabbix-db
  labels:
    app: zabbix-db
spec:
  type: ClusterIP
  ports:
  - name: zabbix-db
    port: 3306
    targetPort: 3306
  selector:
    app: zabbix-db
